tests/error/array_ref_exp.gw
#! [contains] ref array must not have array expression
ref int my_array[2];
